--- a/.gitignore
+++ b/.gitignore
@@ -173,5 +173,20 @@ Temporary Items
 # iCloud generated files
 *.icloud
 
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
 .cache
+.cmake
 .vscode
+.qt
+.qtc
